# avr-simulator

./: CMakeLists.txt  input.vcd  simulate.sh  simulator.c  simulator_config.c  test_program.cpp
